package chapter01.example;

public class Washer extends HomeAppliance {

    @Override
    public void turnOn() {
    }

    @Override
    public void turnOff() {
    }
}
